# rbac-subtract

./: .golangci.yml  AGENTS.md  Dockerfile  LICENSE  Makefile  PROJECT  README.md  go.mod  main.py  pyproject.toml  subtract.py
.github/workflows/: release.yaml
api/v1/: groupversion_info.go  modifyclusterrole_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: kim.karolinska.se_modifyclusterroles.yaml  rbac.kim.karolinska.se_modifyclusterroles.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  modifyclusterrole_admin_role.yaml  modifyclusterrole_editor_role.yaml  modifyclusterrole_viewer_role.yaml  role.yaml
config/samples/: edit.yaml  kustomization.yaml  rbac_v1_modifyclusterrole.yaml  realistic-role.yaml
examples/: modifyclusterrole-sample.yaml  simple.yaml
internal/controller/: modifyclusterrole_controller.go  modifyclusterrole_controller_test.go  suite_test.go
manifests/: crd.yaml  deploy.yaml
pkg/subtract/: subtract.go  subtract_test.go  types.go
pkg/wildcard/: wildcard.go
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: utils.go
tests/: test_subtract.py
