[project]
name = "rbac-subtract"
version = "0.1.0"
description = "Kubernetes controller that subtracts permissions from an existing ClusterRole"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "kopf>=1.44",
  "kubernetes>=36.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
